Added script to build both containers

--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "e2e": "npm run testJsonChrome; npm run testJsonFirefox; npm run generateHtmlReport",
     "e2edocker": "xvfb-run --server-num=99 --server-args='-ac -screen 0 1024x768x16' npm run e2e",
     "buildBrowsers": "docker build -t browsers docker/browsers/",
-    "runBrowsers": "docker exec -it browsers",
     "stopBrowsers": "docker stop $(docker ps -qa --filter ancestor=browsers)",
     "buildJenkins": "mkdir -p $npm_package_jenkinsJobPath && cp -Ra $npm_package_jenkinsJobConfigPath/* $npm_package_jenkinsJobPath && docker build -t jenkinstescafe docker/jenkins/",
     "startJenkins": "_pwd=\"$(pwd)\" && docker run -d -p 8080:8080 -p 50000:50000 -v $_pwd/jenkins_home:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock jenkinstescafe:latest",
     "stopJenkins": "docker stop $(docker ps -qa --filter ancestor=jenkinstescafe)"
+    "buildContainers": "npm run buildBrowsers && npm run buildJenkins"
   },
   "bin": {
     "gherkin-testcafe": "./node_modules/.bin/gherkin-javascript",
