--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "jenkins-testcafe",
   "version": "0.0.1",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/comsysto/testcafecucumberdemo"
+  },
   "jenkinsJobPath": "jenkins_home/jobs/",
   "jenkinsJobConfigPath": "docker/jenkins/config/jobs",
   "scripts": {
