Renamed tasks and added more parameters

--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
     "type": "git",
     "url": "https://github.com/comsysto/testcafecucumberdemo"
   },
+  "comsystoReplyUrl": "https://comsystoreply.de",
+  "testCafeExamplePageUrl": "http://devexpress.github.io/testcafe/example/",
   "jenkinsJobPath": "jenkins_home/jobs/",
   "jenkinsJobConfigPath": "docker/jenkins/config/jobs",
   "scripts": {
-    "testJsonChrome": "cucumber-js --world-parameters {\\\"browsers\\\":[\\\"chrome\\\"]\\,\\\"exampleUrl\\\":\\\"http://devexpress.github.io/testcafe/example/\\\"\\} --format json:reports/chrome.json",
-    "testJsonFirefox": "cucumber-js --world-parameters {\\\"browsers\\\":[\\\"firefox\\\"]\\,\\\"exampleUrl\\\":\\\"http://devexpress.github.io/testcafe/example\\\"\\} --format json:reports/firefox.json",
-    "testJsonSlow": "cucumber-js --world-parameters {\\\"options\\\":{\\\"speed\\\":0.5}\\,\\\"browsers\\\":[\\\"chrome\\\"]\\,\\\"exampleUrl\\\":\\\"http://devexpress.github.io/testcafe/example\\\"\\} --format json:reports/cucumber_report_slow.json",
-    "testJsonRemote": "cucumber-js --world-parameters {\\\"options\\\":{\\\"remote\\\":true\\,\\\"speed\\\":0.1}\\,\\\"exampleUrl\\\":\\\"http://devexpress.github.io/testcafe/example\\\"\\} --format json:reports/cucumber_report.json",
-    "testJsonChromeSafariParalel": "cucumber-js --world-parameters {\\\"browsers\\\":[\\\"chrome\\\",\\\"safari\\\"]\\,\\\"exampleUrl\\\":\\\"http://devexpress.github.io/testcafe/example/\\\"\\} --format json:reports/cucumber_report_remote.json",
+    "testChrome": "cucumber-js --world-parameters {\\\"browsers\\\":[\\\"chrome\\\"]\\,\\\"exampleUrl\\\":\\\"$npm_package_testCafeExamplePageUrl\\\"\\,\\\"comsystoReplyUrl\\\":\\\"$npm_package_comsystoReplyUrl\\\"\\} --format json:reports/Chrome.json",
+    "testFirefox": "cucumber-js --world-parameters {\\\"browsers\\\":[\\\"firefox\\\"]\\,\\\"exampleUrl\\\":\\\"$npm_package_testCafeExamplePageUrl\\\"\\,\\\"comsystoReplyUrl\\\":\\\"$npm_package_comsystoReplyUrl\\\"\\} --format json:reports/Firefox.json",
+    "testSlow": "cucumber-js --world-parameters {\\\"options\\\":{\\\"speed\\\":0.5}\\,\\\"browsers\\\":[\\\"chrome\\\"]\\,\\\"exampleUrl\\\":\\\"http://devexpress.github.io/testcafe/example\\\"\\} --format json:reports/cucumber_report_slow.json",
+    "testRemote": "cucumber-js --world-parameters {\\\"options\\\":{\\\"remote\\\":true\\,\\\"speed\\\":0.1}\\,\\\"exampleUrl\\\":\\\"http://devexpress.github.io/testcafe/example\\\"\\} --format json:reports/cucumber_report.json",
+    "testChromeSafariParalel": "cucumber-js --world-parameters {\\\"browsers\\\":[\\\"chrome\\\",\\\"safari\\\"]\\,\\\"exampleUrl\\\":\\\"http://devexpress.github.io/testcafe/example/\\\"\\} --format json:reports/cucumber_report_remote.json",
     "generateHtmlReport": "rm -rf reports/combined && node src/reporters/html/prepareJson.js && node src/reporters/html/generateHtml.js",
-    "e2e": "npm run testJsonChrome; npm run testJsonFirefox; npm run generateHtmlReport",
+    "e2e": "npm run testChrome; npm run testFirefox; npm run generateHtmlReport",
     "e2edocker": "xvfb-run --server-num=99 --server-args='-ac -screen 0 1024x768x16' npm run e2e",
-    "testJsonChromeDocker": "xvfb-run --server-num=99 --server-args='-ac -screen 0 1024x768x16' npm run testJsonChrome",
-    "testJsonFirefoxDocker": "xvfb-run --server-num=99 --server-args='-ac -screen 0 1024x768x16' npm run testJsonFirefox",
+    "testDockerChrome": "xvfb-run --server-num=99 --server-args='-ac -screen 0 1024x768x16' npm run testChrome",
+    "testDockerFirefox": "xvfb-run --server-num=99 --server-args='-ac -screen 0 1024x768x16' npm run testFirefox",
     "buildBrowsers": "docker build -t browsers -f docker/browsers/Dockerfile .",
     "stopBrowsers": "docker stop $(docker ps -qa --filter ancestor=browsers)",
     "buildJenkins": "mkdir -p $npm_package_jenkinsJobPath && cp -Ra $npm_package_jenkinsJobConfigPath/* $npm_package_jenkinsJobPath && docker build -t jenkinstescafe docker/jenkins/",
