--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "jenkinsJobPath": "jenkins_home/jobs/",
   "jenkinsJobConfigPath": "docker/jenkins/config/jobs",
   "scripts": {
+    "testSafari": "cucumber-js --world-parameters {\\\"browsers\\\":[\\\"safari\\\"]\\,\\\"exampleUrl\\\":\\\"$npm_package_testCafeExamplePageUrl\\\"\\,\\\"comsystoReplyUrl\\\":\\\"$npm_package_comsystoReplyUrl\\\"\\} --format json:reports/Chrome.json",
     "testChrome": "cucumber-js --world-parameters {\\\"browsers\\\":[\\\"chrome\\\"]\\,\\\"exampleUrl\\\":\\\"$npm_package_testCafeExamplePageUrl\\\"\\,\\\"comsystoReplyUrl\\\":\\\"$npm_package_comsystoReplyUrl\\\"\\} --format json:reports/Chrome.json",
     "testFirefox": "cucumber-js --world-parameters {\\\"browsers\\\":[\\\"firefox\\\"]\\,\\\"exampleUrl\\\":\\\"$npm_package_testCafeExamplePageUrl\\\"\\,\\\"comsystoReplyUrl\\\":\\\"$npm_package_comsystoReplyUrl\\\"\\} --format json:reports/Firefox.json",
     "testSlow": "cucumber-js --world-parameters {\\\"options\\\":{\\\"speed\\\":0.5}\\,\\\"browsers\\\":[\\\"chrome\\\"]\\,\\\"exampleUrl\\\":\\\"http://devexpress.github.io/testcafe/example\\\"\\} --format json:reports/cucumber_report_slow.json",
