implementing sample code for Sony Vue

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "https://github.com/rony431/testcafecucumberdemo"
   },
-  "zemogaUrl": "https://comsystoreply.de",
+  "zemogaUrl": "https://www.playstation.com/en-us/network/vue/",
   "testCafeExamplePageUrl": "http://devexpress.github.io/testcafe/example/",
   "jenkinsJobPath": "jenkins_home/jobs/",
   "jenkinsJobConfigPath": "docker/jenkins/config/jobs",
