--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rony431/testcafecucumberdemo"
+    "url": "https://github.com/rony431/testcafecucumberdemo.git"
   },
   "zemogaUrl": "https://www.playstation.com/en-us/network/vue/",
   "testCafeExamplePageUrl": "http://devexpress.github.io/testcafe/example/",
