--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "buildJenkins": "mkdir -p $npm_package_jenkinsJobPath && cp -Ra $npm_package_jenkinsJobConfigPath/* $npm_package_jenkinsJobPath && docker build -t jenkinstescafe docker/jenkins/",
     "startJenkins": "_pwd=\"$(pwd)\" && docker run -d -p 8080:8080 -p 50000:50000 --env JAVA_OPTS=\"-Dorg.jenkinsci.plugins.durabletask.BourneShellScript.HEARTBEAT_CHECK_INTERVAL=30\" -v $_pwd/jenkins_home:/var/jenkins_home -v /var/run/docker.sock:/var/run/docker.sock jenkinstescafe:latest",
     "stopJenkins": "docker stop $(docker ps -qa --filter ancestor=jenkinstescafe)",
-    "buildContainers": "npm run buildBrowsers && npm run buildJenkins"
+    "buildContainers": "npm run buildBrowsers && npm run buildJenkins",
+    "comsystoJob": "NODE_ENV=https://comsystoreply.de/karriere/jobs npm run testChrome  -- features/ComsystoJob.feature"
   },
   "bin": {
     "gherkin-testcafe": "./node_modules/.bin/gherkin-javascript",
